[package]
name = "easy-expose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.4", features = ["derive"] }
color-eyre = "0.5.11"
core_extensions = { version = "1.5.2", features = ["integers"] }
openssh = "0.8.1"
tokio = { version = "1.15.0", features = ["rt", "time", "macros", "rt-multi-thread", "signal"] }
tracing = "0.1.29"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }

[features]
